changed Base64 Encoder to java.util